# Hear-Me-Out

./: .dockerignore  .env.example  .gitignore  .gitmodules  Modal_serving_moshi.md  README.md  VOICE_CONVERSION_README.md  _config.yml  download_models.py  index.md  local_server_requirements.txt  local_vc_server.py  mcp_sse_bridge.py  start_local_vc_server.sh  test_metrics_endpoint.py  test_vc_setup.py
_includes/: head.html
_layouts/: default.html
assets/css/: style.scss
checkpoints/hf_cache/models--nvidia--bigvgan_v2_22khz_80band_256x/refs/: main
checkpoints/hf_cache/models--nvidia--bigvgan_v2_22khz_80band_256x/snapshots/633ff708ed5b74903e86ff1298cf4a98e921c513/: config.json
checkpoints/models--Plachta--Seed-VC/snapshots/257283f9f41585055e8f858fba4fd044e5caed6e/: DiT_seed_v2_uvit_whisper_small_wavenet_bigvgan_pruned.pth  config_dit_mel_seed_uvit_whisper_small_wavenet.yml
checkpoints/models--funasr--campplus/refs/: main
docs/: ARCHITECTURE.md  RUNBOOK.md
frontend/: ISSUES.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ConversationView.tsx  MetricsComparison.tsx  MetricsResultView.tsx  ThemeToggle.tsx  VoiceConversion.tsx
frontend/src/components/conversation/: ControlPanel.tsx  DownloadBar.tsx  DownloadBarSkeleton.tsx  MessageFeed.tsx  VoiceMetricsModal.tsx
frontend/src/components/ui/: switch.tsx  tabs.tsx
frontend/src/hooks/: useConversation.ts  useMeanVCPipeline.ts  useRecorder.ts  useSpeechRecognition.ts  useWebSocket.ts
frontend/src/lib/: audio.ts  config.ts
frontend/src/services/: api.ts  audioMerge.ts
infra/: Dockerfile.api  Dockerfile.meanvc  Dockerfile.moshi  Dockerfile.personaplex  build-frontend.sh  docker-compose.gpu.yml  docker-compose.yml  docker_launch.sh  download-meanvc-sv.sh  download-models.sh  generate-ssl.sh  meanvc_server.py  personaplex_entrypoint.py  requirements-frozen.txt  run.sh  run_all.sh  setup.sh
requirements/: requirements.txt
services/app_api/: app.py  metrics.py  pyproject.toml
services/meanvc/: pyproject.toml  server.py
services/minicpm_o/: pyproject.toml  server.py
services/personaplex/: entrypoint.py  pyproject.toml
services/xvc/: pyproject.toml  server.py
src/: app.py  common.py  moshi.py
src/frontend/: app.jsx  index.html
tests/: e2e_test.py  moshi_client.py
tools/: local-dev.py  metrics.py  test-pp-server.js  test-pp-server.py
