[project]
name = "hearmeout-meanvc"
version = "0.1.0"
description = "Hear-Me-Out MeanVC: real-time streaming voice conversion + PersonaPlex chat-proxy (CPU)."
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch==2.4.0",
    "torchaudio==2.4.0",
    "numpy==1.26.4",
    "soundfile==0.12.1",
    "librosa==0.10.2",
    "sphn>=0.1.4",
    "aiohttp>=3.10",
    # Speaker verification (wavlm_large) used by the MeanVC runtime
    # (src/runtime/speaker_verification, copied into the workspace by setup.sh).
    # Verify against the MeanVC repo's runtime requirements on first `uv lock`.
    "transformers",
    "einops==0.7.0",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
