[project]
name = "hearmeout-minicpm-o"
version = "0.1.0"
description = "Hear-Me-Out MiniCPM-o: speech LM bridge (GPU). Exposes PersonaPlex's binary tag WS protocol on :8000 while driving openbmb/MiniCPM-o internally."
requires-python = ">=3.11,<3.12"
dependencies = [
    # MiniCPM-o 4.5 official requirements (model card "Half-Duplex Realtime Speech
    # Conversation"): transformers==4.51.0, accelerate, torch>=2.3,<=2.8,
    # torchaudio<=2.8, and minicpmo-utils[all] (pulls its TTS/vocoder deps).
    "torch==2.4.0",
    "torchaudio==2.4.0",
    "transformers==4.51.0",
    "accelerate",
    "minicpmo-utils[all]>=1.0.5",
    # Our bridge server.
    "aiohttp>=3.10",
    "sphn>=0.1.4,<0.2",          # Opus codec; 0.2+ removed OpusStreamWriter.read_bytes
    "librosa==0.9.0",            # 24k->16k mic resampling + ref-audio IO; pinned by minicpmo-utils
    "numpy",                     # version driven by minicpmo-utils/librosa
    "silero-vad>=5.1",           # streaming turn detection (VADIterator)
    "huggingface-hub>=0.34,<1.0",
    "hf-transfer>=0.1.8",
]

# trust_remote_code pulls MiniCPM-o's modeling code on first load; if it imports a
# module not provided by minicpmo-utils[all], uv sync will fail — add it here and re-sync.

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
